#ifndef JACKSAVELOAD_H
#define JACKSAVELOAD_H

#include <QObject>

class JACKSaveLoad : public QObject
{
    Q_OBJECT
public:
    explicit JACKSaveLoad(QObject *parent = nullptr);
    
signals:
    
};

#endif // JACKSAVELOAD_H
